--- a/laptop/polybar/config
+++ b/laptop/polybar/config
@@ -9,12 +9,12 @@
 
 [bar/main-hlwm]
 monitor = eDP
-width = 100%
-height = 40
+width = 98.5%
+height = 35
 #border-size = 2
 #border-color = ${colors.colorBorder}
-#offset-x = 0.6%
-#offset-y = 12
+offset-x = 0.75%
+offset-y = 5
 radius = 0.0
 fixed-center = true
 bottom = false
