--- a/pc/polybar/config
+++ b/pc/polybar/config
@@ -5,6 +5,9 @@
 #  / .___/\____/_/\__, /_.___/\__,_/_/        /_/|_/_/_/  \____/  
 # /_/            /____/                                           
 
+[global/wm]
+include-file = ~/.config/polybar/themes.ini
+
 ###########################################################
 ####                      DP1-BAR                      ####
 ###########################################################
@@ -159,13 +162,82 @@ font-7 = Weather Icons:size=12;1
 ###########################################################
 ###########################################################
 
-[colors]
-colorUnderline = #888888
-colorForeground = #b0b0c8
-colorBackground = #384048
-colorBorder = #000000
-colorActive = #ffffff
+###########################################################
+####                      DP1-BAR                      ####
+###########################################################
 
+[bar/main-leftwm]
+monitor = DisplayPort-1
+#
+width = 100%
+height = 24
+#border-size = 1
+#border-color = ${colors.colorBorder}
+#offset-x = 0.6%
+#offset-y = 10
+#radius = 10
+fixed-center = true
+
+background = ${colors.colorBackground}
+foreground = ${colors.colorForeground}
+
+;wm-restack = qtile
+override-redirect = false
+enable-ipc = true
+
+module-margin-left = 0
+module-margin-right = 0
+modules-left = ewmh weather
+modules-center = cpu date memory
+modules-right = SSD HDD eth powermenu
+
+font-0 = Open Sans:size=11:style=Semibold;2
+font-1 = Weather Icons:size=11;2
+font-2 = octicons:style=Medium
+font-3 = Twemoji:style=Regular
+font-4 = Roboto:size=11:style=Medium;2
+font-5 = FontAwesome:size=11:style=Regular;2
+font-6 = SourceCodePro:size=11:style=Regular;2
+
+###########################################################
+####                     DP2-BAR                       ####
+###########################################################
+
+[bar/sec-leftwm]
+monitor = DisplayPort-2
+
+width = 100%
+height = 24
+#border-size = 1
+#border-color = ${colors.colorBorder}
+#offset-x = 1.5%
+#offset-y = 10
+#radius = 10
+fixed-center = true
+
+background = ${colors.colorBackground}
+foreground = ${colors.colorForeground}
+
+;wm-restack = qtile
+override-redirect = false
+enable-ipc = true
+
+module-margin-left = 0
+module-margin-right = 0
+modules-left = ewmh
+modules-center = date
+modules-right = powermenu
+
+font-0 = Open Sans:size=11:style=Semibold;2
+font-1 = Weather Icons:size=11;2
+font-2 = octicons:style=Medium
+font-3 = Twemoji:style=Regular
+font-4 = Roboto:size=11:style=Medium;2
+font-5 = FontAwesome:size=11:style=Regular;2
+font-6 = SourceCodePro:size=11:style=Regular;2
+
+###########################################################
+###########################################################
 ###########################################################
 
 [module/SSD]
@@ -365,12 +437,11 @@ label-font = 1
 
 [settings]
 screenchange-reload = true
-#pseudo-transparency = true
 
 format-background = ${colors.colorBackground}
 format-foreground = ${colors.colorForeground}
 
-format-padding = 3
+format-padding = 4
 
 ###########################################################
 
