polybar theme files on laptop

--- a/laptop/polybar/config
+++ b/laptop/polybar/config
@@ -3,6 +3,9 @@
 # ░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░▄▄▄░█░░░█░█░█░█░█▀▀░░█░░█░█░▄▄▄░█▀▄░░█░░█▀▀░█/█
 # ░▀░░░▀▀▀░▀▀▀░░▀░░▀▀░░▀░▀░▀░▀░░░░░▀▀▀░▀▀▀░▀░▀░▀░░░▀▀▀░▀▀▀░░░░░▀░▀░▀▀▀░▀░░░░▀░
 
+[global/wm]
+include-file = ~/.config/polybar/themes.ini
+
 ###########################################################
 ########HLWM-BAR###########################################
 ###########################################################
@@ -69,15 +72,6 @@ font-4 = SourceCodePro:size=10:style=Regular;3
 
 ###########################################################
 ###########################################################
-###########################################################
-
-[colors]
-colorUnderline = #ffffff
-colorBackground = #301840
-colorForeground = #d890d0
-colorBorder = #011b78
-colorActive = #ffffff
-
 ###########################################################
 
 [module/SSD]
