pc configs and teams blur fix

--- a/combined/picom/picom.conf
+++ b/combined/picom/picom.conf
@@ -117,7 +117,8 @@ blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c",
-  "class_g = 'slop'"
+  "class_g = 'slop'",
+  "name *= 'rect-overlay'"
 ];
 
 #################################
