update ncspot theme

--- a/combined/ncspot/config.toml
+++ b/combined/ncspot/config.toml
@@ -4,19 +4,19 @@ notify = true
 gapless = true
 
 [theme]
-background = "black"
-primary = "white"
-secondary = "white"
-title = "#009900"
-playing = "#009900"
-playing_bg = "black"
-highlight = "light white"
-highlight_bg = "#009900"
-error = "light white"
-error_bg = "#009900"
-statusbar = "black"
-statusbar_progress = "#009900"
-statusbar_bg = "#009900"
-cmdline = "light white"
-cmdline_bg = "black"
-search_match = "red"
+background = "#000000FF"
+primary = "#F1F1F1"
+secondary = "#DCDCDC"
+title = "#1ED760"
+playing = "#1ED760"
+playing_selected = "#1ED760"
+playing_bg = "#181818"
+highlight = "#1DB954"
+highlight_bg = "#000000"
+error = "#FFE4E4"
+error_bg = "#A50000"
+statusbar = "#000000"
+statusbar_progress = "#00AC4C"
+statusbar_bg = "#00AC4C"
+cmdline = "#CBFFDE"
+cmdline_bg = "#444444"
