--- a/combined/kitty/kitty.conf
+++ b/combined/kitty/kitty.conf
@@ -8,7 +8,7 @@ include ./theme.conf
 
 #: Fonts {{{
 
-font_family      Source Code Pro
+font_family      Source Code Pro Semibold
 bold_font        Source Code Pro Bold
 italic_font      Source Code Pro Italic
 bold_italic_font Source Code Pro Bold Italic
@@ -186,7 +186,7 @@ enable_audio_bell no
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 10
+window_padding_width 5
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
