update bashrc and i3lock

--- a/combined/kitty/kitty.conf
+++ b/combined/kitty/kitty.conf
@@ -284,3 +284,6 @@ map kitty_mod+v  paste_from_clipboard
 # map kitty_mod+s  paste_from_selection
 # map shift+insert paste_from_selection
 # map kitty_mod+o  pass_selection_to_program
+
+# shell integration
+shell_integration no_cursor
