--- a/other/locale.conf
+++ b/other/locale.conf
@@ -1,7 +1,7 @@
 LANG=C
 LC_CTYPE="en_US.UTF-8"
 LC_NUMERIC="de_AT.UTF-8"
-LC_TIME="en_US.UTF-8"
+LC_TIME=C
 LC_COLLATE="de_AT.UTF-8"
 LC_MONETARY="de_AT.UTF-8"
 LC_MESSAGES="en_US.UTF-8"
