--- a/combined/kitty/kitty.conf
+++ b/combined/kitty/kitty.conf
@@ -1,289 +1,56 @@
-# ░█░█░▀█▀░▀█▀░▀█▀░█░█░░░░░█▀▀░█▀█░█▀█░█▀▀░▀█▀░█▀▀░░░░░█░█░▀█░░█▀▀░▄▀▄
-# ░█▀▄░░█░░░█░░░█░░░█░░▄▄▄░█░░░█░█░█░█░█▀▀░░█░░█░█░▄▄▄░█▀▄░░█░░█▀▀░█/█
-# ░▀░▀░▀▀▀░░▀░░░▀░░░▀░░░░░░▀▀▀░▀▀▀░▀░▀░▀░░░▀▀▀░▀▀▀░░░░░▀░▀░▀▀▀░▀░░░░▀░
+#     __   _ __  __              __  ___________
+#    / /__(_) /_/ /___  __      / /_<  / __/ __ \
+#   / //_/ / __/ __/ / / /_____/ //_/ / /_/ / / /
+#  / ,< / / /_/ /_/ /_/ /_____/ ,< / / __/ /_/ /
+# /_/|_/_/\__/\__/\__, /     /_/|_/_/_/  \____/
+#                /____/
 
-# Includes
-
+# includes
 include ./theme.conf
 
-#: Fonts {{{
-
+# fonts
 font_family      Source Code Pro Semibold
 bold_font        Source Code Pro Bold
 italic_font      Source Code Pro Italic
 bold_italic_font Source Code Pro Bold Italic
+font_size 11.0
 
-# font_size 11.0
-
-#: Font size (in pts)
-
-#cursor_text_color #aa00ff
-
-#: Choose the color of text under the cursor. If you want it rendered
-#: with the background color of the cell underneath instead, use the
-#: special keyword: background
-
+# cursor theme
 cursor_shape underline
-
-#: The cursor shape can be one of (block, beam, underline)
-
-# cursor_beam_thickness 1.5
-
-#: Defines the thickness of the beam cursor (in pts)
-
 cursor_underline_thickness 1.5
 
-#: Defines the thickness of the underline cursor (in pts)
-
+# cursor blinking
+cursor_stop_blinking_after 5
 cursor_blink_interval 0.3
 
-#: The interval (in seconds) at which to blink the cursor. Set to zero
-#: to disable blinking. Negative values mean use system default. Note
-#: that numbers smaller than repaint_delay will be limited to
-#: repaint_delay.
-
-cursor_stop_blinking_after 5
-
-#: Stop blinking cursor after the specified number of seconds of
-#: keyboard inactivity.  Set to zero to never stop blinking.
-
-#: }}}
-
-#: Scrollback {{{
-
+# keep 2000 lines in memory
 scrollback_lines 2000
 
-#: Number of lines of history to keep in memory for scrolling back.
-#: Memory is allocated on demand. Negative numbers are (effectively)
-#: infinite scrollback. Note that using very large scrollback is not
-#: recommended as it can slow down performance of the terminal and
-#: also use large amounts of RAM. Instead, consider using
-#: scrollback_pager_history_size.
-
+# detect urls
+detect_urls yes
 open_url_with default
 
-#: The program with which to open URLs that are clicked on. The
-#: special value default means to use the operating system's default
-#: URL handler.
-
-detect_urls yes
-
-#: Detect URLs under the mouse. Detected URLs are highlighted with an
-#: underline and the mouse cursor becomes a hand over them. Even if
-#: this option is disabled, URLs are still clickable.
-
-
+# focus follows mouse
 focus_follows_mouse yes
 
-#: Set the active window to the window under the mouse when moving the
-#: mouse around
-
-# pointer_shape_when_grabbed arrow
-
-#: The shape of the mouse pointer when the program running in the
-#: terminal grabs the mouse. Valid values are: arrow, beam and hand
-
+# pointer shape
 default_pointer_shape arrow
 
-#: The default shape of the mouse pointer. Valid values are: arrow,
-#: beam and hand
+# sync refresh
+sync_to_monitor yes
 
-#: Performance tuning {{{
-
-# repaint_delay 10
-
-#: Delay (in milliseconds) between screen updates. Decreasing it,
-#: increases frames-per-second (FPS) at the cost of more CPU usage.
-#: The default value yields ~100 FPS which is more than sufficient for
-#: most uses. Note that to actually achieve 100 FPS you have to either
-#: set sync_to_monitor to no or use a monitor with a high refresh
-#: rate. Also, to minimize latency when there is pending input to be
-#: processed, repaint_delay is ignored.
-
-# input_delay 3
-
-#: Delay (in milliseconds) before input from the program running in
-#: the terminal is processed. Note that decreasing it will increase
-#: responsiveness, but also increase CPU usage and might cause flicker
-#: in full screen programs that redraw the entire screen on each loop,
-#: because kitty is so fast that partial screen updates will be drawn.
-
-# sync_to_monitor yes
-
-#: Sync screen updates to the refresh rate of the monitor. This
-#: prevents tearing (https://en.wikipedia.org/wiki/Screen_tearing)
-#: when scrolling. However, it limits the rendering speed to the
-#: refresh rate of your monitor. With a very high speed mouse/high
-#: keyboard repeat rate, you may notice some slight input latency. If
-#: so, set this to no.
-
-#: }}}
-
-#: Terminal bell {{{
-
+# terminal bell
 enable_audio_bell no
 
-#: Enable/disable the audio bell. Useful in environments that require
-#: silence.
-
-#: Window layout {{{
-
-# remember_window_size  yes
-# initial_window_width  640
-# initial_window_height 400
-
-#: If enabled, the window size will be remembered so that new
-#: instances of kitty will have the same size as the previous
-#: instance. If disabled, the window will initially have size
-#: configured by initial_window_width/height, in pixels. You can use a
-#: suffix of "c" on the width/height values to have them interpreted
-#: as number of cells instead of pixels.
-
-# enabled_layouts *
-
-#: The enabled window layouts. A comma separated list of layout names.
-#: The special value all means all layouts. The first listed layout
-#: will be used as the startup layout. Default configuration is all
-#: layouts in alphabetical order. For a list of available layouts, see
-#: the https://sw.kovidgoyal.net/kitty/index.html#layouts.
-
-# window_resize_step_cells 2
-# window_resize_step_lines 2
-
-#: The step size (in units of cell width/cell height) to use when
-#: resizing windows. The cells value is used for horizontal resizing
-#: and the lines value for vertical resizing.
-
-# window_border_width 0.5pt
-
-#: The width of window borders. Can be either in pixels (px) or pts
-#: (pt). Values in pts will be rounded to the nearest number of pixels
-#: based on screen resolution. If not specified the unit is assumed to
-#: be pts. Note that borders are displayed only when more than one
-#: window is visible. They are meant to separate multiple windows.
-
-# draw_minimal_borders yes
-
-#: Draw only the minimum borders needed. This means that only the
-#: minimum needed borders for inactive windows are drawn. That is only
-#: the borders that separate the inactive window from a neighbor. Note
-#: that setting a non-zero window margin overrides this and causes all
-#: borders to be drawn.
-
-# window_margin_width 0
-
-#: The window margin (in pts) (blank area outside the border). A
-#: single value sets all four sides. Two values set the vertical and
-#: horizontal sides. Three values set top, horizontal and bottom. Four
-#: values set top, right, bottom and left.
-
-# single_window_margin_width -1
-
-#: The window margin (in pts) to use when only a single window is
-#: visible. Negative values will cause the value of
-#: window_margin_width to be used instead. A single value sets all
-#: four sides. Two values set the vertical and horizontal sides. Three
-#: values set top, horizontal and bottom. Four values set top, right,
-#: bottom and left.
-
+# window padding
 window_padding_width 5
 
-#: The window padding (in pts) (blank area between the text and the
-#: window border). A single value sets all four sides. Two values set
-#: the vertical and horizontal sides. Three values set top, horizontal
-#: and bottom. Four values set top, right, bottom and left.
-
-# placement_strategy center
-
-#: When the window size is not an exact multiple of the cell size, the
-#: cell area of the terminal window will have some extra padding on
-#: the sides. You can control how that padding is distributed with
-#: this option. Using a value of center means the cell area will be
-#: placed centrally. A value of top-left means the padding will be on
-#: only the bottom and right edges.
-
-# active_border_color #00ff00
-
-#: The color for the border of the active window. Set this to none to
-#: not draw borders around the active window.
-
-# inactive_border_color #cccccc
-
-#: The color for the border of inactive windows
-
-# bell_border_color #ff5a00
-
-#: The color for the border of inactive windows in which a bell has
-#: occurred
-
-# inactive_text_alpha 1.0
-
-#: Fade the text in inactive windows by the specified amount (a number
-#: between zero and one, with zero being fully faded).
-
-# hide_window_decorations no
-
-#: Hide the window decorations (title-bar and window borders) with
-#: yes. On macOS, titlebar-only can be used to only hide the titlebar.
-#: Whether this works and exactly what effect it has depends on the
-#: window manager/operating system.
-
-#: }}}
-
-# background_image none
-
-#: Path to a background image. Must be in PNG format.
-
-# background_image_layout tiled
-
-#: Whether to tile or scale the background image.
-
-# background_image_linear no
-
-#: When background image is scaled, whether linear interpolation
-#: should be used.
-
-# dynamic_background_opacity no
-
-#: Allow changing of the background_opacity dynamically, using either
-#: keyboard shortcuts (increase_background_opacity and
-#: decrease_background_opacity) or the remote control facility.
-
-# background_tint 0.9
-
-#: How much to tint the background image by the background color. The
-#: tint is applied only under the text area, not margin/borders. Makes
-#: it easier to read the text. Tinting is done using the current
-#: background color for each window. This setting applies only if
-#: background_opacity is set and transparent windows are supported or
-#: background_image is set.
-
-# dim_opacity 0
-
-#: How much to dim text that has the DIM/FAINT attribute set. One
-#: means no dimming and zero means fully dimmed (i.e. invisible).
-# selection_foreground #000000
-
-#: The foreground for text selected with the mouse. A value of none
-#: means to leave the color unchanged.
-
-# selection_background #fffacd
-
-#: The background for text selected with the mouse.
-
+# kitty mod
 kitty_mod ctrl+shift
 
-#: The value of kitty_mod is used as the modifier for all default
-#: shortcuts, you can change it in your kitty.conf to change the
-#: modifiers for all the default shortcuts.
-
-#: Clipboard {{{
-
+# keybinds
 map kitty_mod+c copy_to_clipboard
 map kitty_mod+v  paste_from_clipboard
-# map kitty_mod+s  paste_from_selection
-# map shift+insert paste_from_selection
-# map kitty_mod+o  pass_selection_to_program
 
 # shell integration
-shell_integration no_cursor
+shell_integration disabled
