update easyeffects and picom

--- a/combined/picom/picom.conf
+++ b/combined/picom/picom.conf
@@ -26,6 +26,7 @@ no-fading-openclose = false
 no-fading-destroyed-argb = true
 
 # transparency/opacity
+menu-opacity = 1.0
 inactive-opacity = 1.0;
 frame-opacity = 1.0;
 active-opacity = 1.0;
@@ -45,11 +46,17 @@ blur :
   kern = "3x3box";
 };
 blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c",
-  "class_g = 'slop'",
-  "name *= 'rect-overlay'"
+    "class_g = 'slop'",
+    "name *= 'rect-overlay'",
+	"_GTK_FRAME_EXTENTS@:c",
+	"window_type = 'combo'",
+	"window_type = 'desktop'",
+	"window_type = 'dnd'",
+	"window_type = 'dropdown_menu'",
+	"window_type = 'toolbar'",
+	"window_type = 'menu'",
+	"window_type = 'notification'",
+	"window_type = 'utility'",
 ];
 
 # general
@@ -73,4 +80,6 @@ wintypes:
   tooltip = { shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
+  popup_menu = { opacity = 1.0; }
+  dropdown_menu = { opacity = 1.0; }
 };
