--- a/combined/starship.toml
+++ b/combined/starship.toml
@@ -2,28 +2,24 @@ add_newline = false
 
 format = """
 $cmd_duration\
-$python\
-$rust\
-$go\
-$lua\
-$java\
-$php\
-$git_branch\
-$git_state\
-$git_commit\
 $directory\
+$git_branch\
 $character"""
 
 [character]
 format = "$symbol "
-success_symbol = "[>](bold #ffffff)"
-error_symbol = "[>](bold #ff5555)"
+success_symbol = "[❯](bold #ffffff)"
+error_symbol = "[❯](bold #ffffff)"
 
 [directory]
-style = "italic bold #9e9e9e"
+style = "italic bold #ffffff"
+home_symbol = "~"
 read_only = ""
 
 [cmd_duration]
 format = "\n[$duration]($style)\n"
 style = "italic bold #66ff66"
 show_milliseconds = false
+
+[git_branch]
+style = "italic bold #66ff66"
