update bashrc and kitty conf

--- a/combined/kitty/kitty.conf
+++ b/combined/kitty/kitty.conf
@@ -9,11 +9,11 @@
 include ./theme.conf
 
 # fonts
-font_family      Source Code Pro Semibold
+font_family      Source Code Pro Medium
 bold_font        Source Code Pro Bold
 italic_font      Source Code Pro Italic
 bold_italic_font Source Code Pro Bold Italic
-font_size 12
+font_size 14
 
 # cursor theme
 cursor_shape underline
