add pipewire confs

--- a/combined/kitty/kitty.conf
+++ b/combined/kitty/kitty.conf
@@ -9,7 +9,7 @@
 include ./theme.conf
 
 # fonts
-font_family      Source Code Pro Regular
+font_family      Source Code Pro
 bold_font        Source Code Pro Bold
 italic_font      Source Code Pro Italic
 bold_italic_font Source Code Pro Bold Italic
