--- a/other/etc/pacman.conf
+++ b/other/etc/pacman.conf
@@ -1,31 +1,20 @@
 # GENERAL OPTIONS
 
 [options]
-#RootDir     = /
-#DBPath      = /var/lib/pacman/
-#CacheDir    = /var/cache/pacman/pkg/
-#LogFile     = /var/log/pacman.log
-#GPGDir      = /etc/pacman.d/gnupg/
-#HookDir     = /etc/pacman.d/hooks/
 HoldPkg     = pacman glibc
-#XferCommand = /usr/bin/curl -L -C - -f -o %o %u
-#XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
-#CleanMethod = KeepInstalled
 Architecture = auto
-
 IgnorePkg   = linux-xanmod-edge linux-xanmod-edge-headers 
 IgnoreGroup =
 NoUpgrade   =
 NoExtract   =
 
-# Misc options
-#UseSyslog
+# MISC
+
 Color
-#NoProgressBar
+ILoveCandy
 CheckSpace
 VerbosePkgLists
 ParallelDownloads = 3
-ILoveCandy
 SigLevel = Required DatabaseOptional
 LocalFileSigLevel = Optional
 #RemoteFileSigLevel = Required
