add mpv and btop + rewrite guide a bit

--- a/configs/combined/electron-flags.conf
+++ b/configs/combined/electron-flags.conf
@@ -1,3 +1,6 @@
 --disable-features=UseOzonePlatform
 --disable-software-rasterizer
 --enable-features=VaapiVideoDecoder
+--enable-accelerated-video
+--ignore-gpu-blacklist
+--enable-gpu-rasterization
